#22 fix: overflow patch

--- a/orbyx/graph_explorer/orbyx/static/orbyx/style.css
+++ b/orbyx/graph_explorer/orbyx/static/orbyx/style.css
@@ -37,6 +37,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  overflow: hidden;
   font-family: 'Bayon', sans-serif;
 }
 
